--- a/ansible/dockerfile
+++ b/ansible/dockerfile
@@ -1,13 +1,12 @@
 FROM ubuntu:20.04
-RUN apt update && apt install -y python3 ansible openssh-client
 USER root
+WORKDIR /home/ansible/
+RUN apt update && apt install -y python3 ansible openssh-client
 
-WORKDIR /root/
-COPY ["./ansible/","."]
+COPY  ["./ansible/","."]
 
-RUN echo "cat /root/ssh-keys/ansible.pub || ssh-keygen -b 3072 -t rsa -f /root/ssh-keys/ansible -q -N '' -C ansible" > setup.sh
-RUN echo "ansible all --key-file ~/ssh-keys/ansible -m ping" >> setup.sh
-RUN echo "tail -f /dev/null" >> setup.sh
+COPY ./setup.sh .
 
 RUN chmod +x setup.sh
 ENTRYPOINT [ "sh","setup.sh" ]
+CMD [ "ansible","all","--key-file","ssh-keys/ansible","-m","ping" ]
