--- a/ansible/dockerfile
+++ b/ansible/dockerfile
@@ -6,7 +6,7 @@ RUN apt update && apt install -y python3 ansible openssh-client
 COPY  ["./ansible/","."]
 
 COPY ./setup.sh .
-
+RUN cat alias.sh >> ~/.bashrc
 RUN chmod +x setup.sh
 ENTRYPOINT [ "sh","setup.sh" ]
 CMD [ "ansible","all","--key-file","ssh-keys/ansible","-m","ping" ]
