--- a/ansible/playbooks/devopsPlaybook.yml
+++ b/ansible/playbooks/devopsPlaybook.yml
@@ -1,7 +1,7 @@
 # Desciption of the Ansible playbook
 ---
 - name: install tools
-  hosts: debian
+  hosts: allan
   become: true # true to become root
 
   tasks:
@@ -44,3 +44,10 @@
     shell: |
         apt-get update
         apt-get install docker-ce docker-ce-cli containerd.io -y
+# docker compose  
+  - name: Install docker compose
+    shell: |
+        curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        chmod +x /usr/local/bin/docker-compose
+        ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+        usermod -a -G docker $USER
