--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,4 @@ services:
             - "./ansible/outputs:/home/ansible/outputs"
             - "./vars/:/home/ansible/vars/"
             - "./ansible/ssh-keys/:/home/ansible/ssh-keys/"
+            - "./ansible/inventory:/home/ansible/inventory"
