feat: gnome install

--- a/ansible/playbooks/devtools.yml
+++ b/ansible/playbooks/devtools.yml
@@ -2,28 +2,43 @@
 ---
 - name: install tools
   hosts: all
-  become: true # true to become root
+# true to become root
 
   tasks:
-  # update
+# update
   - name: "Update Repository cache"
     apt:
       update_cache: true
       cache_valid_time: 3600
       force_apt_get: true
-#install VS code
+#dependences
   - name: install dependences
     apt:
       pkg:
         - wget
         - gpg
+        - curl
+        - dbus
+        - git
+        - less
+#gnome extentions
+  - name: install
+    bash: |
+        wget -O gnome-shell-extension-installer "https://github.com/brunelli/gnome-shell-extension-installer/raw/master/gnome-shell-extension-installer"
+        chmod +x gnome-shell-extension-installer
+        mv gnome-shell-extension-installer /usr/bin/
+#install gnome extentios
+  - name: "dash to dock"
+    bash: | 
+        gnome-shell-extension-installer 307 # Install "Dash to Dock"
+#install VS code
   - name: downland vs code
     bash: |
       wget -qO- https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > packages.microsoft.gpg
       install -o root -g root -m 644 packages.microsoft.gpg /etc/apt/trusted.gpg.d/
       sh -c 'echo "deb [arch=amd64,arm64,armhf signed-by=/etc/apt/trusted.gpg.d/packages.microsoft.gpg] https://packages.microsoft.com/repos/code stable main" > /etc/apt/sources.list.d/vscode.list'
       rm -f packages.microsoft.gpg
-  # update
+# update
   - name: "Update Repository cache"
     apt:
       update_cache: true
@@ -33,6 +48,15 @@
     apt:
       pkg:
         - code
+#copyq
+  - name: "install copyq"
+    apt:
+      pkg:
+        - copyq
+#chrome
+  - name: "install chrome"
+    apt:
+      deb: https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
 #install spotify
   - name: Add Apt Keys
   apt_key: keyserver=hkp://keyserver.ubuntu.com:80 id=931FF8E79F0876134EDDBDCCA87FF9DF48BF1C90 state=present
@@ -42,4 +66,3 @@
 
   - name: Install spotify
     apt: name=spotify-client update_cache=yes state=latest
-          
