--- a/ansible/playbooks/interpreters.yml
+++ b/ansible/playbooks/interpreters.yml
@@ -22,6 +22,8 @@
         curl -fsSL https://deb.nodesource.com/setup_lts.x | bash -
         apt install nodejs -y
   - name: Install reqired packages
+    tags:
+      - python
     apt:
       pkg:
         - git
