--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
             dockerfile: ./ansible/dockerfile
         volumes: 
             - "./ansible/playbooks:/home/ansible/playbooks"
+            - "./ansible/files/:/home/ansible/files/"
             - "./ansible/outputs:/home/ansible/outputs"
             - "./vars/:/home/ansible/vars/"
             - "./ansible/ssh-keys/:/home/ansible/ssh-keys/"
