--- a/ansible/playbooks/devtools.yml
+++ b/ansible/playbooks/devtools.yml
@@ -239,7 +239,7 @@
       - go_envs
     shell: |
         echo "#go path by user
-        export GOPATH=$HOME/go
-        export GOBIN=$GOPATH/bin
+        export GOPATH=\$HOME/go
+        export GOBIN=\$GOPATH/bin
         export GOROOT=/usr/local/go
         export PATH=\$PATH:\$GOBIN:\$GOROOT/bin" >> /home/{{ hostvars[inventory_hostname].ansible_user }}/.bashrc
