feat: ssh config fix: readme change: setup.sh, alias.sh,.gitignore

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory
+inventory = inventory/inventory
 private_key_file = ~/ssh-keys/ansible
 host_key_checking = False
 
