--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3.4'
 services:
     ansible:
+        environment:
+            SERVER_HOST: ${SERVER_HOST}
+            SERVER_USER: ${SERVER_USER}
+            SERVER_NAME: ${SERVER_NAME}
+            GIT_NAME: ${GIT_NAME}
+            GIT_EMAIL: ${GIT_EMAIL}
         image: custom-ansible
         build: 
             context: .
@@ -11,5 +17,7 @@ services:
             - "./ansible/outputs:/home/ansible/outputs"
             - "./vars/:/home/ansible/vars/"
             - "./ansible/ssh-keys/:/home/ansible/ssh-keys/"
-            - "./ansible/inventory:/home/ansible/inventory"
             - "./setup.sh:/home/ansible/setup.sh"
+            - inventory:/home/ansible/inventory
+volumes:
+    inventory:
