--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
             SERVER_NAME: ${SERVER_NAME}
             GIT_NAME: ${GIT_NAME}
             GIT_EMAIL: ${GIT_EMAIL}
+            SSH_KEY_PASSPHRASE: ${SSH_KEY_PASSPHRASE}
         image: custom-ansible
         build: 
             context: .
