fix: ssh.config

--- a/ansible/files/ssh.config
+++ b/ansible/files/ssh.config
@@ -1,6 +1,6 @@
-Host github.com
-    HostName github
-Host gitlab.com
+Host github
+    HostName github.com
+Host gitlab
     HostName gitlab.com
     
 Host *
