add: AddKeysToAgent ssh.config

--- a/ansible/files/ssh.config
+++ b/ansible/files/ssh.config
@@ -4,5 +4,6 @@ Host gitlab
     HostName gitlab.com
     
 Host *
+    AddKeysToAgent yes
     PreferredAuthentications publickey
     IdentityFile ~/id_rsa
