--- a/ansible/dockerfile
+++ b/ansible/dockerfile
@@ -2,7 +2,8 @@ FROM ubuntu:20.04
 USER root
 WORKDIR /home/ansible/
 RUN apt update && apt install -y python3 ansible openssh-client
-COPY ./ssh.config /root/.ssh/config
+# COPY ./ssh.config /root/.ssh/config
+RUN echo "Host *\n\tStrictHostKeyChecking no\n\tUserKnownHostsFile=/dev/null" > /root/.ssh/config
 COPY  ["./ansible/","."]
 
 COPY ./setup.sh .
