fix: install tmux

--- a/ansible/files/.tmux.conf
+++ b/ansible/files/.tmux.conf
@@ -13,3 +13,4 @@ bind ';' split-window -v
 #bind -n C-k clear-history
 #unbind C-l
 bind C-l clear-history
+set -g default-terminal "screen-256color"
