add: files trackets

--- a/ansible/files/.tmux.conf
+++ b/ansible/files/.tmux.conf
@@ -24,13 +24,16 @@ set-option -g status-left-length 150
 set-option -g status-left-style default
 set -ag status-left '#[default]#[fg=colour136,bg=colour235,bright]'
 set -ag status-left '#[fg=green,bg=default,bright] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[default]'
-# git status 
-set -ag status-left '#[fg=green,bg=default,bright] #(cd #{pane_current_path}; git status) #[default]'
+
+#files added
+set -ag status-left '#[fg=green,bg=default,bright] #(cd #{pane_current_path}; git status -s | grep -E "(\?|A).*$" | wc -l) #[default]'
+#files modified
+set -ag status-left '#[fg=yellow,bg=default,bright] #(cd #{pane_current_path}; git status -s | grep -E "M.*$" | wc -l) #[default]'
+#files deleted
+set -ag status-left '#[fg=red,bg=default,bright] #(cd #{pane_current_path}; git status -s | grep -E "D.*$" | wc -l) #[default]'
+
 
 #right options
 set-option -g status-right-length 150
 set-option -g status-right-style default
 set-option -g status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d"
-
-
-
