update: tmux colors

--- a/ansible/files/.tmux.conf
+++ b/ansible/files/.tmux.conf
@@ -1,36 +1,31 @@
 set -g mouse on
 # Splitting terminals using | and -
-
-
 unbind a
-
 unbind ';'
-
 bind a split-window -h
-
 bind ';' split-window -v
-
 bind C-l clear-history
 set -g default-terminal "screen-256color"
 
+#get colors in https://michurin.github.io/xterm256-color-picker/
+set-option -g status-style fg=colour136,bg=colour234
 
 set-option -g status on
 set-option -g status-interval 1
-set-option -g status-style fg=colour136,bg=colour235
 set-window-option -g window-status-current-format ""
 
 #left options
 set-option -g status-left-length 150
 set-option -g status-left-style default
-set -ag status-left '#[default]#[fg=colour136,bg=colour235,bright]'
+set -ag status-left '#[default]GIT#[fg=colour136,bg=colour235,bright]'
 set -ag status-left '#[fg=green,bg=default,bright] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[default]'
 
 #files added
-set -ag status-left '#[fg=green,bg=default,bright] #(cd #{pane_current_path}; git status -s | grep -E "(\?|A).*$" | wc -l) #[default]'
+set -ag status-left '#[fg=green,bg=default,bright] A:#(cd #{pane_current_path}; git status -s | grep -E "(\?|A).*$" | wc -l) #[default]'
 #files modified
-set -ag status-left '#[fg=yellow,bg=default,bright] #(cd #{pane_current_path}; git status -s | grep -E "M.*$" | wc -l) #[default]'
+set -ag status-left '#[fg=yellow,bg=default,bright] M:#(cd #{pane_current_path}; git status -s | grep -E "M.*$" | wc -l) #[default]'
 #files deleted
-set -ag status-left '#[fg=red,bg=default,bright] #(cd #{pane_current_path}; git status -s | grep -E "D.*$" | wc -l) #[default]'
+set -ag status-left '#[fg=red,bg=default,bright] D:#(cd #{pane_current_path}; git status -s | grep -E "D.*$" | wc -l) #[default]'
 
 
 #right options
