--- a/ansible/files/.tmux.conf
+++ b/ansible/files/.tmux.conf
@@ -17,17 +17,16 @@ set-window-option -g window-status-current-format ""
 #left options
 set-option -g status-left-length 150
 set-option -g status-left-style default
-set -ag status-left '#[default]GIT#[fg=colour136,bg=colour235,bright]'
-set -ag status-left '#[fg=green,bg=default,bright] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[default]'
-
-#files added
+GIT_BRANCH='#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
+#GIT
+set -ag status-left '#[default]GIT '$GIT_BRANCH'#[fg=colour136,bg=colour235,bright]'
+set -ag status-left ''
+# #files added
 set -ag status-left '#[fg=green,bg=default,bright] A:#(cd #{pane_current_path}; git status -s | grep -E "(\?|A).*$" | wc -l) #[default]'
 #files modified
 set -ag status-left '#[fg=yellow,bg=default,bright] M:#(cd #{pane_current_path}; git status -s | grep -E "M.*$" | wc -l) #[default]'
 #files deleted
 set -ag status-left '#[fg=red,bg=default,bright] D:#(cd #{pane_current_path}; git status -s | grep -E "D.*$" | wc -l) #[default]'
-
-
 #right options
 set-option -g status-right-length 150
 set-option -g status-right-style default
