add: git branch variable to .tmux.config

--- a/ansible/files/.tmux.conf
+++ b/ansible/files/.tmux.conf
@@ -18,15 +18,22 @@ set-window-option -g window-status-current-format ""
 set-option -g status-left-length 150
 set-option -g status-left-style default
 GIT_BRANCH='#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
+GIT_FILES_UNPUSHED='#(cd #{pane_current_path}; git cherry -v | wc -l || echo 0) '
+GIT_FILES_UNPULLED='#(cd #{pane_current_path}; git diff orgin/'GIT_BRANCH'...'GIT_BRANCH' | wc -l || echo 0) '
+
+#if GIT_BRANCH is not empty
 #GIT
 set -ag status-left '#[default]GIT '$GIT_BRANCH'#[fg=colour136,bg=colour235,bright]'
-set -ag status-left ''
 # #files added
 set -ag status-left '#[fg=green,bg=default,bright] A:#(cd #{pane_current_path}; git status -s | grep -E "(\?|A).*$" | wc -l) #[default]'
 #files modified
 set -ag status-left '#[fg=yellow,bg=default,bright] M:#(cd #{pane_current_path}; git status -s | grep -E "M.*$" | wc -l) #[default]'
 #files deleted
 set -ag status-left '#[fg=red,bg=default,bright] D:#(cd #{pane_current_path}; git status -s | grep -E "D.*$" | wc -l) #[default]'
+#files unpushed
+set -ag status-left '#[fg=colour136,bg=default,bright] ^:'$GIT_FILES_UNPUSHED' #[default]'
+#files unpulled
+set -ag status-left '#[fg=colour136,bg=default,bright] v:'$GIT_FILES_UNPULLED' #[default]'
 #right options
 set-option -g status-right-length 150
 set-option -g status-right-style default
