fix: status bar tmux

--- a/ansible/files/.tmux.conf
+++ b/ansible/files/.tmux.conf
@@ -26,7 +26,7 @@ GIT_FILES_UNPULLED='#(cd #{pane_current_path}; git log --oneline --left-right --
 #GIT
 set -g status-left '#[default]GIT '$GIT_BRANCH'#[fg=colour136,bg=colour235,bright]'
 GIT_FILES_UNPUSHED='#(cd #{pane_current_path}; git cherry -v | wc -l || echo 0) '
-GIT_FILES_UNPULLED='#(cd #{pane_current_path}; git diff orgin/'GIT_BRANCH'...'GIT_BRANCH' | wc -l || echo 0) '
+GIT_FILES_UNPULLED='#(cd #{pane_current_path}; git log --oneline --left-right --decorate origin/'$GIT_BRANCH'... | grep -i "^<"  | wc -l || echo 0) '
 
 #if GIT_BRANCH is not empty
 #GIT
