styled: status-bar tmux

--- a/ansible/files/.tmux.conf
+++ b/ansible/files/.tmux.conf
@@ -37,10 +37,10 @@ set -ag status-left '#[fg=green,bg=default,bright] A:#(cd #{pane_current_path}; 
 set -ag status-left '#[fg=yellow,bg=default,bright] M:#(cd #{pane_current_path}; git status -s | grep -E "M.*$" | wc -l) #[default]'
 #files deleted
 set -ag status-left '#[fg=red,bg=default,bright] D:#(cd #{pane_current_path}; git status -s | grep -E "D.*$" | wc -l) #[default]'
-#files unpushed
-set -ag status-left '#[fg=colour136,bg=default,bright] ^:'$GIT_FILES_UNPUSHED' #[default]'
 #files unpulled
-set -ag status-left '#[fg=colour136,bg=default,bright] v:'$GIT_FILES_UNPULLED' #[default]'
+set -ag status-left '#[fg=colour136,bg=default,bright] ↓:'$GIT_FILES_UNPULLED' #[default]'
+#files unpushed
+set -ag status-left '#[fg=colour136,bg=default,bright] ↑:'$GIT_FILES_UNPUSHED' #[default]'
 #right options
 set-option -g status-right-length 150
 set-option -g status-right-style default
